--- a/JavaClassWork/nbproject/private/private.properties
+++ b/JavaClassWork/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Steven\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\smorrissey\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
