committing config files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /JavaFXApplicationTest/nbproject/private/
+/Exercise 23/nbproject/private/
+/Java2Class11FX/nbproject/private/
+/JavaClassWork/nbproject/private/
