--- a/Java2Lab2/nbproject/project.properties
+++ b/Java2Lab2/nbproject/project.properties
@@ -1,5 +1,6 @@
 #Mon Feb 22 23:02:04 EST 2016
 excludes=
+file.reference.derbyclient.jar=C:\\Users\\fista\\Documents\\db-derby-10.12.1.1-bin\\lib\\derbyclient.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 run.classpath=${javac.classpath}\:${build.classes.dir}
@@ -51,7 +52,8 @@ annotation.processing.enabled=true
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 mkdist.disabled=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.derbyclient.jar}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
