--- a/Java2Lab2/nbproject/project.properties
+++ b/Java2Lab2/nbproject/project.properties
@@ -21,7 +21,7 @@ build.dir=build
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
-main.class=java2lab3.Java2Lab3
+main.class=application.Application
 dist.jar=${dist.dir}/Java2Lab2.jar
 javac.test.processorpath=${javac.test.classpath}
 javadoc.use=true
